--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Caaz/notbadcat-utilities#readme",
   "dependencies": {
-    "axios": "^1.2.2"
+    "axios": "^1.2.2",
+    "sharp": "^0.31.3"
   }
 }
